packages/bel_engine/lib/bel_engine_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Enumerates capture devices. Returns NULL if the audio backend is
/// unavailable, which is a normal outcome on a headless machine and not an
/// error worth crashing over. Free with bel_device_list_free.
@ffi.Native<ffi.Pointer<bel_device_list> Function()>()
external ffi.Pointer<bel_device_list> bel_devices_enumerate();

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<bel_device_list>)>()
external int bel_device_list_count(ffi.Pointer<bel_device_list> list);

@ffi.Native<
  ffi.Pointer<bel_device_info> Function(
    ffi.Pointer<bel_device_list>,
    ffi.Uint32,
  )
>()
external ffi.Pointer<bel_device_info> bel_device_list_at(
  ffi.Pointer<bel_device_list> list,
  int index,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<bel_device_list>)>()
external void bel_device_list_free(ffi.Pointer<bel_device_list> list);

/// ------------------------------------------------------------------------ */
/// /* Lifecycle                                                                 */
/// /* ------------------------------------------------------------------------
@ffi.Native<ffi.Int32 Function()>()
external int bel_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> bel_version_string();

/// Fills `cfg` with defaults. Call this before overriding fields, so that
/// adding a field to bel_config does not silently leave it at zero in every
/// existing caller.
@ffi.Native<ffi.Void Function(ffi.Pointer<bel_config>)>()
external void bel_config_defaults(ffi.Pointer<bel_config> cfg);

@ffi.Native<ffi.Pointer<bel_engine> Function(ffi.Pointer<bel_config>)>()
external ffi.Pointer<bel_engine> bel_engine_create(ffi.Pointer<bel_config> cfg);

@ffi.Native<ffi.Void Function(ffi.Pointer<bel_engine>)>()
external void bel_engine_destroy(ffi.Pointer<bel_engine> engine);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<bel_engine>)>()
external int bel_engine_start(ffi.Pointer<bel_engine> engine);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<bel_engine>)>()
external int bel_engine_stop(ffi.Pointer<bel_engine> engine);

/// Clears every integrating measurement — integrated loudness, LRA, all the
/// "max since reset" peaks, the clip counters — and restarts the elapsed clock.
/// Momentary values are left alone; they describe the signal, not the session.
@ffi.Native<ffi.Void Function(ffi.Pointer<bel_engine>)>()
external void bel_engine_reset(ffi.Pointer<bel_engine> engine);

/// The stable address of this engine's snapshot. Valid from create() until
/// destroy(), and it never moves. Call it once and keep the pointer; the
/// contents are only meaningful after bel_snapshot_acquire().
@ffi.Native<ffi.Pointer<bel_snapshot> Function(ffi.Pointer<bel_engine>)>()
external ffi.Pointer<bel_snapshot> bel_snapshot_buffer(
  ffi.Pointer<bel_engine> engine,
);

/// Refresh the snapshot from the analysis thread and return its generation.
///
/// This is the only function called every frame, so it is the only one whose
/// cost is worth arguing about. It is a seqlock read: an atomic load, a memcpy
/// of a few kilobytes, and a second atomic load to confirm no writer intervened.
/// It never blocks the analysis thread and it never waits on a mutex.
///
/// Returns the same value as the previous call when nothing new was published,
/// which is the caller's cue to skip repainting.
@ffi.Native<ffi.Uint64 Function(ffi.Pointer<bel_engine>)>()
external int bel_snapshot_acquire(ffi.Pointer<bel_engine> engine);

/// Measure `frames` frames of interleaved float audio and publish the result.
///
/// Only valid when the engine was created with BEL_SOURCE_PUSH; anything else
/// returns BEL_ERR_WRONG_STATE rather than quietly mixing pushed audio into a
/// stream that a device is already driving.
///
/// Synchronous: on return the snapshot reflects these samples. Any block size is
/// accepted, and the measurements do not depend on it — the 400 ms and 3 s
/// windows are counted in samples internally, so pushing an hour in one call and
/// pushing it in 512-frame chunks produce identical readings. The conformance
/// suite relies on exactly that.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<bel_engine>,
    ffi.Pointer<ffi.Float>,
    ffi.Uint32,
  )
>()
external int bel_engine_push(
  ffi.Pointer<bel_engine> engine,
  ffi.Pointer<ffi.Float> interleaved,
  int frames,
);

/// The address of each array field inside a snapshot.
///
/// These exist so that a consumer can build a typed view over the arrays
/// without knowing their byte offsets. dart:ffi can read the scalars through a
/// generated struct definition perfectly well, but the array fields need to
/// reach the canvas as a flat Float32List — `Canvas.drawRawPoints` and
/// `Vertices.raw` take one directly, and going through per-element accessors
/// instead would put 512 bounds-checked loads on the paint path where a single
/// pointer would do.
///
/// Asking the compiler for the offset rather than computing it in Dart is the
/// whole point. A struct layout that differs between the compiler that built
/// the library and the assumptions baked into the bindings does not crash — it
/// reads the wrong field and displays a plausible number, which is the failure
/// mode this project can least afford.
///
/// Call once, at startup, and keep the views: the snapshot never moves.
@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Float> bel_snapshot_peak(
  ffi.Pointer<bel_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Float> bel_snapshot_rms(
  ffi.Pointer<bel_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Float> bel_snapshot_vu(
  ffi.Pointer<bel_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Uint32> bel_snapshot_clip(
  ffi.Pointer<bel_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Float> bel_snapshot_spectrum(
  ffi.Pointer<bel_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<bel_snapshot>)>()
external ffi.Pointer<ffi.Float> bel_snapshot_spectrum_peak(
  ffi.Pointer<bel_snapshot> snapshot,
);

/// ------------------------------------------------------------------------ */
/// /* Status codes                                                              */
/// /* ------------------------------------------------------------------------
enum bel_status {
  BEL_OK(0),
  BEL_ERR_INVALID_ARGUMENT(-1),
  BEL_ERR_OUT_OF_MEMORY(-2),
  BEL_ERR_WRONG_STATE(-3),
  BEL_ERR_THREAD(-4),
  BEL_ERR_UNSUPPORTED(-5);

  final int value;
  const bel_status(this.value);

  static bel_status fromValue(int value) => switch (value) {
    0 => BEL_OK,
    -1 => BEL_ERR_INVALID_ARGUMENT,
    -2 => BEL_ERR_OUT_OF_MEMORY,
    -3 => BEL_ERR_WRONG_STATE,
    -4 => BEL_ERR_THREAD,
    -5 => BEL_ERR_UNSUPPORTED,
    _ => throw ArgumentError('Unknown value for bel_status: $value'),
  };
}

/// ------------------------------------------------------------------------ */
/// /* Signal sources                                                            */
/// /* ------------------------------------------------------------------------
enum bel_source_kind {
  /// Digital black. Useful for asserting that the meters actually fall to their
  /// floor rather than freezing at their last value.
  BEL_SOURCE_SILENCE(0),

  /// An internally generated test signal. This is not a toy: it is how the
  /// render path is benchmarked without an audio device attached, and how CI
  /// exercises the engine on machines that have no sound hardware at all.
  BEL_SOURCE_TEST_TONE(1),

  /// A hardware or loopback capture device. Phase 1.
  BEL_SOURCE_DEVICE(2),

  /// Decoded from a file, driven as fast as the CPU allows. Phase 5.
  BEL_SOURCE_FILE(3),

  /// The caller supplies the audio, synchronously, via bel_engine_push().
  ///
  /// No thread is started and nothing is paced against a clock: a push returns
  /// once the block has been measured. That makes the engine a pure function of
  /// the samples it was given, which is what lets the conformance suite feed it
  /// a signal it constructed and assert on the result — no device, no timing,
  /// no flakiness. It is also the shape file analysis needs, so Phase 5 decodes
  /// into this rather than growing a second path.
  BEL_SOURCE_PUSH(4);

  final int value;
  const bel_source_kind(this.value);

  static bel_source_kind fromValue(int value) => switch (value) {
    0 => BEL_SOURCE_SILENCE,
    1 => BEL_SOURCE_TEST_TONE,
    2 => BEL_SOURCE_DEVICE,
    3 => BEL_SOURCE_FILE,
    4 => BEL_SOURCE_PUSH,
    _ => throw ArgumentError('Unknown value for bel_source_kind: $value'),
  };
}

/// Everything the UI is allowed to draw, as one flat plain-old-data struct.
///
/// Field values are in the units named in each comment. dB values use -INFINITY
/// for true digital silence. A field the current build does not compute is NaN,
/// never zero — zero is a legitimate reading for correlation, balance and
/// several dB quantities, so it cannot double as "no data".
///
/// Layout rules, because dart:ffi reproduces this struct byte for byte:
/// - No pointers. No bitfields. No `bool`. Fixed-size arrays only.
/// - Widest members first, so natural alignment introduces no padding that
/// differs between compilers.
/// - The `reserved` members are explicit padding, named rather than left to
/// the compiler so that adding a float later does not shift every field
/// after it. They are public because a leading underscore would make the
/// generated Dart bindings private and trip the unused-field lint.
/// - Append new fields at the end, and bump BEL_ABI_VERSION when you do.
final class bel_snapshot extends ffi.Struct {
  /// Increments every time the analysis thread publishes. The reader uses it to
  /// skip repainting when nothing has changed — at 120 fps against a ~47 Hz
  /// measurement rate, most frames have nothing new to say.
  @ffi.Uint64()
  external int generation;

  /// Seconds of signal measured since the last reset. Not wall-clock time: with
  /// a file source this advances far faster than real time, and that is the
  /// point.
  @ffi.Double()
  external double elapsed_seconds;

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Uint32()
  external int channels;

  /// BEL_FLAG_*
  @ffi.Uint32()
  external int flags;

  /// Frames the capture callback had to discard because the analysis thread
  /// fell behind, since the last reset.
  ///
  /// This is not a diagnostic counter. Integrated loudness averages every block
  /// since the reset, so a dropped second does not make the reading slightly
  /// stale — it makes it an average of a different programme than the one that
  /// played. A non-zero value here means the integrated reading cannot be
  /// trusted, and the UI has to say so rather than quietly showing it.
  @ffi.Uint32()
  external int dropped_frames;

  /// 400 ms window
  @ffi.Float()
  external double lufs_momentary;

  /// 3 s window
  @ffi.Float()
  external double lufs_short;

  /// gated, since reset
  @ffi.Float()
  external double lufs_integrated;

  /// loudness range, LU
  @ffi.Float()
  external double lra;

  /// max over a 3 s sliding window
  @ffi.Float()
  external double true_peak;

  /// max since reset
  @ffi.Float()
  external double true_peak_max;

  /// max since reset
  @ffi.Float()
  external double sample_peak_max;

  @ffi.Float()
  external double reserved1;

  /// true_peak - lufs_short,      LU
  @ffi.Float()
  external double dr_short;

  /// true_peak_max - lufs_integrated, LU
  @ffi.Float()
  external double dr_integrated;
